test/Fail/Issue380.err
Issue380.agda:21.16-27: error: [UnequalTerms]
Sigma _A_27 _B_28 !=<
z .fst == fst y → _snd_26 (y = y) (z = z) == snd z
when checking that the inferred type of an application
  Sigma _A_27 _B_28
matches the expected type
  z .fst == fst y → _snd_26 (y = y) (z = z) == snd z
